--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "ngx-clipboard": "^10.0.0",
     "ngx-color-picker": "^7.0.2",
     "ngx-currency": "^2.3.3",
-    "ngx-mask": "^7.9.10",
+    "ngx-mask": "^8.2.0",
     "ngx-perfect-scrollbar": "5.0.0-7",
-    "ngx-print": "^1.2.0-beta.4",
+    "ngx-print": "^1.2.1",
     "ngx-spinner": "^7.2.0",
     "ngx-webcam": "^0.2.6",
     "node-sass": "^4.13.1",
